@@ -3,7 +3,7 @@ Microsoft Developer Studio Workspace File, Format Version 6.00
 
 ###############################################################################
 
-Project: "TSRM"=..\TSRM\TSRM.dsp - Package Owner=<4>
+Project: "TSRM"=.\TSRM\TSRM.dsp - Package Owner=<4>
 
 Package=<5>
 {{{
@@ -15,7 +15,7 @@ Package=<4>
 
 ###############################################################################
 
-Project: "libzendts"=..\libzend\libzendts.dsp - Package Owner=<4>
+Project: "libzendts"=.\libzend\libzendts.dsp - Package Owner=<4>
 
 Package=<5>
 {{{
@@ -23,6 +23,9 @@ Package=<5>
 
 Package=<4>
 {{{
+    Begin Project Dependency
+    Project_Dep_Name TSRM
+    End Project Dependency
 }}}
 
 ###############################################################################
